Move jumbotron so it’s main page only

--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@ layout: default
 title: Gergely Polonkai
 post_listing: true
 ---
+
+<div class="jumbotron">
+    <h1 class="text-right">
+        Gergely Polonkai<br>
+        <small>developer, systems engineer and administrator</small>
+    </h1>
+</div>
+
 <div class="container">
     <div class="row">
         <hr class="blog-hr">
