Remove private information

--- a/resume/index.html
+++ b/resume/index.html
@@ -16,10 +16,7 @@ title: Resume
         Hungary. I spent my life moving here-and-there in the country,
         and finally settled in <span class="b" itemprop="address"
         itemscope itemtype="http://schema.org/Address">
-        <span itemprop="locality">Budapest</span></span>. Although I
-        have already found my mate for life, I
-        am <span class="b">single</span> yet (living in a common-law
-        marriage), being the proud father of a son and a daughter.
+        <span itemprop="locality">Budapest</span></span>.
     </p>
 
     <p>
