Add remark about Icelandic

--- a/resume/index.html
+++ b/resume/index.html
@@ -25,7 +25,7 @@ title: Resume
         or by phone on <span class="b" itemprop="telephone">+36 (30)
         7375-706</span>. I fluently speak and
         write <span class="b">English</span>
-        and <span class="b">Hungarian</span>.
+	and <span class="b">Hungarian</span> and currently learning Icelandic.
     </p>
 
     <p>
