Add rulers to months

--- a/minari/index.html
+++ b/minari/index.html
@@ -68,7 +68,7 @@
                     </li>
                 </ul>
             </nav>
-            <div class="holiday" id="day-0-1">Hëdur</div>
+            <div class="holiday" id="day-0-1">Hëður</div>
             <div class="row">
                 <div class="month col-md-4 col-sm-1" data-month="1"></div>
                 <div class="month col-md-4 col-sm-1" data-month="2"></div>
