Add rulers to holidays

--- a/minari/index.html
+++ b/minari/index.html
@@ -114,6 +114,10 @@
             $('div.month').each(function() {
                 genMonthTable(this);
             });
+
+            $('div .holiday').each(function() {
+                updateHoliday(this);
+            });
         </script>
     </body>
 </html>
