--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@ title: Resume
         Hungary. I spent my life moving here-and-there in the country,
         and finally settled in <span class="b" itemprop="address"
         itemscope itemtype="http://schema.org/Address">
-        <span itemprop="locality">Budapest</span></span>.
+        <span itemprop="locality">Veresegyház</span></span>.
     </p>
 
     <p>
@@ -181,7 +181,7 @@ title: Resume
         a <span class="b">freelancer developer</span> and
         a <span class="b">systems engineer</span> for
         a <span class="b">startup network monitoring
-        company</span>. Here we are building a help desk system using
+        company</span>. Here we were building a help desk system using
         open source products like <span class="b
         keyword">OTRS::ITSM</span>, <span class="b
         keyword">OpenLDAP</span>, and <span class="b
