Add an easter egg-ish link to the full about page

--- a/about.html
+++ b/about.html
@@ -4,3 +4,21 @@ title: About the author
 permalink: /about/
 ---
 {% include about.html %}
+
+<h3>Some fun stats and links</h3>
+
+<h4>I’m a registered Linux User :)</h4>
+<p>
+    <a href="https://www.linuxcounter.net/user/416972">
+        <img src="https://www.linuxcounter.net/cert/416972.png"
+             alt="I am Linux user #416972">
+    </a>
+</p>
+
+<h4>I have my own GeekCode</h4>
+<pre>
+-----BEGIN GEEK CODE BLOCK-----
+Version: 3.1
+GCM/CS/IT/O d--(+) s++:- a C++$ UB++L++++$ P++ L+++$ E++>$ W+++$ N o? K w+ O M- V PS+ PE Y+ PGP+(++) t+ 5 X R !tv b+ DI++ D+ G e h----() r+++ y++++
+-----END GEEK CODE BLOCK-----
+</pre>
