--- a/resume.html
+++ b/resume.html
@@ -208,16 +208,29 @@ title: Resume
     </p>
 
     <p>
+        I left that company in 2016, as such a slow moving giant couldn’t
+        really keep up with my pace.  I signed with another startup creating
+        games capable of analysing work behaviour.  Here we mainly use
+        <span class="b keyword">Flask</span>,
+        <span class="b keyword">Cassandra</span>, and
+        <span class="b keyword">Tensorflow</span>.  Unlike the previous one,
+        this is a true learning organization, and given its size, it is
+        capable of taking quick turns if market changes (and that’s exactly
+        what I need).
+    </p>
+
+    <p>
         In my <span class="b">free time</span>, I wander in forests,
         take pictures, and sometimes manipulate them with
         the <span class="b keyword">GIMP</span>. Sometimes
         I <span class="b">write</span> short fantasy or sci-fi novels
         using <span class="b keyword">LibreOffice</span>. I am also
         developing some software in <span class="b keyword">C</span>,
-        whose source code is managed with <span class="b
-        keyword">Git</span>. When I’m not in the mood for writing, I
-        go and check out the news on several technical areas, mostly
-        IT and engineering, or give a try to a new programming
+        <span class="b keyword">Python</span>, and
+        <span class="b keyword">Vala</span>, whose source code is managed
+        with <span class="b keyword">Git</span>. When I’m not in the mood
+        for writing, I go and check out the news on several technical areas,
+        mostly IT and engineering, or give a try to a new programming
         language in the name of “why not?”.
     </p>
 </div>
